--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 En esta actividad nos adentraremos en el estudio de varios patrones de arquitectura y diseño sumamente interesantes. Estos patrones son fundamentales para optimizar la estructura y funcionalidad de nuestras aplicaciones, permitiéndonos, como ingenieros de software, crear soluciones más eficientes, mantenibles y escalables. A través de su aplicación, lograremos mejorar significativamente la calidad del software que desarrollamos, asegurando que sea más robusto y fácil de evolucionar con el tiempo.
+Para acceder a la actividad da clic en el menú superior que dice "Wiki".
